--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -5,8 +5,8 @@ $desktop-width: 1280px;
 
 $primary-color: #8AC926;
 
-$primary-light: #EBEDEF;
-$primary-lighter: #F2F3F5;
+$primary-light: #E3E5E8;
+$primary-lighter: #EBEDEF;
 
-$title-font: "Lexend", sans-serif;
-$content-font: "Josefin Sans", sans-serif;
+$title-font: "Josefin Sans", sans-serif;
+$content-font: "Lexend", sans-serif;
