--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -14,12 +14,38 @@
 
 @mixin roomBtn {
     background-color: $primary-color;
-    height: 1rem;
-    width: 3rem;
+    height: 3rem;
+    width: 25rem;
     cursor: pointer;
     text-align: center;
     font-size: 0.73rem;
     border: none;
     font-family: $title-font;
     font-size: 500;
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: 0.2s;
+
+    &:hover {
+        border-radius: 30px;
+    }
+}
+
+@mixin navBtn ($iconURL) {
+    height: 50px;
+    width: 50px;
+    background-image: url($iconURL);
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    transition: 0.2s;
+
+    &:hover {
+        border-radius: 30%;
+    }
 }
