--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -9,13 +9,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 16rem;
+    padding-top: 10rem;
     align-items: center;
 }
 
 .box {
     display: flex;
     width: 45rem;
+    max-width: 80%;
     height: 20rem;
     background-color: white;
     flex-direction: column;
@@ -41,7 +42,6 @@
     display: flex;
     align-items: baseline;
     align-self: baseline;
-    padding: 0 0 7.5rem 1.3rem;
+    padding: 0 0 3.8rem 1.3rem;
 
-    &:hover {}
 }
