--- a/src/pages/EnterRoom/EnterRoom.scss
+++ b/src/pages/EnterRoom/EnterRoom.scss
@@ -28,7 +28,7 @@
         font-size: 1.5rem;
 
         &:focus {
-            outline: #FFCA3A 2px solid;
+            outline: $secondary-color 2px solid;
         }
     }
 }
