--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,3 +10,5 @@ $primary-lighter: #EBEDEF;
 
 $title-font: "Josefin Sans", sans-serif;
 $content-font: "Lexend", sans-serif;
+
+$secondary-color: #FFCA3A;
