--- a/src/components/TextChannel/TextChannel.scss
+++ b/src/components/TextChannel/TextChannel.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    justify-content: space-between;
 
     &__head {
         display: flex;
@@ -27,10 +28,12 @@
 
     &__messages {
         height: 100%;
+        max-height: 78vh;
         padding: 1rem;
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        overflow: auto;
     }
 
     &__input {
@@ -50,7 +53,7 @@
             background-position: 98% center;
 
             &:focus {
-                outline: #FFCA3A 2px solid;
+                outline: $secondary-color 2px solid;
             }
         }
     }
