--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,13 @@
+@use "./styles/partials/mixins" as *;
+
 .app {
     display: flex;
+    // height: 100vh;
+
+    flex-direction: column-reverse;
+
+
+    @include tablet {
+        flex-direction: row;
+    }
 }
