--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -9,27 +9,53 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 10rem;
+    padding-top: 15rem;
     align-items: center;
 }
 
 .box {
     display: flex;
-    width: 45rem;
-    max-width: 80%;
-    height: 20rem;
+    width: 80%;
+    max-width: 89%;
     background-color: white;
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
     box-sizing: border-box;
-    padding: 0 4rem;
     border-radius: 8px;
+    padding: 3rem 1rem;
+    // height: 20rem;
+
+    @include tablet {
+        padding: 3rem 4rem;
+    }
 
     &__title {
+        font-size: 1.8rem;
+        line-height: 1.5rem;
         font-weight: 700;
-        font-size: 2.2rem;
-        line-height: 2.3rem
+        text-align: center;
+        text-shadow: 0.8px 1.5px $secondary-color;
+
+        @include tablet {
+            font-size: 2.3rem;
+            line-height: 2.3rem
+        }
+
+        // &:first-child {
+
+        //     @include tablet
+        //     font-size: 1.7rem;
+        // }
+
+        &:last-child {
+            display: none;
+
+            @include tablet {
+                margin-top: 0.3rem;
+                display: block
+            }
+        }
     }
 
     &__btn {
@@ -39,9 +65,20 @@
 }
 
 .direct {
-    display: flex;
-    align-items: baseline;
-    align-self: baseline;
-    padding: 0 0 3.8rem 1.3rem;
+    transform: rotate(270deg);
 
+    @include tablet {
+        display: flex;
+        align-items: baseline;
+        align-self: baseline;
+        padding: 0 0 3.8rem 1.3rem;
+    }
+
+    &__text {
+        display: none;
+
+        @include tablet {
+            display: block;
+        }
+    }
 }
