--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -1,33 +1,58 @@
 @use "../../styles/partials/_variables.scss" as *;
+@use "../../styles/partials/_mixins.scss" as *;
+@use "../../styles/partials/_reset.scss" as *;
 
 .channel {
-    width: 15rem;
-    height: 100%;
     background-color: #F7F7F7;
+    height: 100%;
+    width: 3rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+
+    @include tablet {
+        width: 15rem;
+        max-width: 12.5rem;
+    }
 
     &__head {
         display: flex;
         height: 3rem;
         align-items: center;
-        justify-content: space-between;
         box-sizing: border-box;
         border-bottom: 2px $primary-light solid;
-        padding: 0 0.8rem;
         align-items: center;
+        padding: 0 0.2rem;
+        justify-content: center;
+
+        @include tablet {
+            justify-content: space-between;
+            padding: 0 0.8rem;
+        }
     }
 
     &__welcome {
-        font-size: 1rem;
+        font-size: 0.7rem;
+        display: none;
+
+        @include tablet {
+            display: block;
+            font-size: 1rem;
+        }
     }
 
     &__share {
-        width: 1.3rem;
-        height: 1.3rem;
+        width: 1rem;
+        height: 1rem;
         background-image: url("../../assets/share.svg");
         background-repeat: no-repeat;
-        background-size: 1.3rem;
+        background-size: contain;
         background-position: center;
-        cursor: pointer;
+
+        @include tablet {
+            width: 1.3rem;
+            height: 1.3rem;
+        }
 
         &--tooltip {
             background-color: $secondary-color;
@@ -40,6 +65,39 @@
     }
 
     &__voice {
-        background-color: slateblue;
+        font-weight: 800;
+        font-size: 0.7rem;
+        margin-top: 0.8rem;
+        margin-left: 0.2rem;
+        width: 100%;
+        text-align: left;
+        box-sizing: border-box;
+        text-shadow: 0.8px 1.5px $primary-light;
+        color: grey;
+        text-transform: uppercase;
+
+
+        @include tablet {
+            padding: 0 1rem;
+            font-size: 0.8rem;
+            margin-left: 0.8rem;
+            background-image: url("../../assets/arrowsRight.svg");
+            background-repeat: no-repeat;
+            background-size: 0.9rem;
+            background-position: 0 center;
+            padding-left: 2rem;
+        }
+    }
+
+    &__users {
+        max-width: 100%;
+    }
+
+    &__self {
+        margin-top: auto;
+        margin-bottom: 0;
+        display: flex;
+        padding: 1.5rem;
+        justify-content: space-between;
     }
 }
