--- a/src/pages/EnterRoom/EnterRoom.scss
+++ b/src/pages/EnterRoom/EnterRoom.scss
@@ -12,6 +12,7 @@
         gap: 1.2rem;
         text-align: center;
         font-family: $title-font;
+        text-shadow: 0.8px 1.5px $secondary-color;
     }
 
     &__input {
