--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -48,10 +48,26 @@
     border: none;
     transition: 0.2s;
     margin: 0 0.5rem;
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
+
+    @include tablet {
+        height: 50px;
+        width: 50px;
+    }
 
     &:hover {
         border-radius: 30%;
     }
+}
+
+@mixin avatar($size) {
+    height: $size;
+    min-width: $size;
+    border-radius: 50%;
+    background-image: url("../../assets/self.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    border: 1px solid;
 }
