--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -26,7 +26,7 @@
     gap: 2rem;
     box-sizing: border-box;
     border-radius: 8px;
-    padding: 3rem 1rem;
+    padding: 3rem 0.7rem;
     margin: auto;
 
     @include tablet {
@@ -73,18 +73,22 @@
     display: flex;
     flex-direction: column-reverse;
     align-self: flex-end;
-    padding: 0 1rem 0.5rem 0;
+    padding: 0 0.5rem 0.4rem 0;
+    align-items: center;
+    box-sizing: border-box;
+    animation: heartBeat;
+    animation-duration: 1.5s;
+    overflow: hidden;
 
     @include tablet {
         align-items: baseline;
         align-self: baseline;
         padding: 0 0 3.8rem 1.3rem;
-        transform: none;
     }
 
     &__icon {
         transform: rotate(270deg);
-        height: 4rem;
+        max-width: 3rem;
 
         @include tablet {
             transform: none;
@@ -92,7 +96,7 @@
     }
 
     &__text {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
 
         @include tablet {
             display: block;
