--- a/src/pages/EnterRoom/EnterRoom.scss
+++ b/src/pages/EnterRoom/EnterRoom.scss
@@ -22,7 +22,7 @@
 
     &__input {
         border: none;
-        background-color: #EBEDEF;
+        background-color: $secondary-light;
         border-radius: 5px;
         background-image: url("../../assets/enter.svg");
         background-repeat: no-repeat;
