--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/_reset.scss" as *;
 
 .channel {
-    background-color: #F7F7F7;
+    background-color: $secondary-lighter;
     height: 100%;
     width: 3rem;
     box-sizing: border-box;
@@ -42,8 +42,8 @@
     }
 
     &__share {
-        width: 1rem;
-        height: 1rem;
+        width: 1.4rem;
+        height: 1.4rem;
         background-image: url("../../assets/share.svg");
         background-repeat: no-repeat;
         background-size: contain;
