--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -10,6 +10,10 @@
     height: 60%;
     width: 1.5rem;
 
+    &:hover {
+        filter: sepia(100%) saturate(2355%) hue-rotate(327deg) brightness(100%) contrast(106%);
+    }
+
     &__overlay {
         background-color: $secondary-light;
         height: 10rem;
@@ -20,7 +24,7 @@
         border-radius: 15px;
         flex-direction: column;
         position: fixed;
-        box-shadow: 3px 2px $primary-light;
+        box-shadow: -3px 3px $primary-light;
         box-sizing: border-box;
         padding: 1rem;
         justify-content: space-between;
