--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -66,7 +66,7 @@
 
     &__voice {
         font-weight: 800;
-        font-size: 0.7rem;
+        font-size: 0.8rem;
         margin-top: 0.8rem;
         margin-left: 0.2rem;
         width: 100%;
@@ -75,17 +75,20 @@
         text-shadow: 0.8px 1.5px $primary-light;
         color: grey;
         text-transform: uppercase;
-
+        text-shadow: 0.8px 1.5px $secondary-color;
 
         @include tablet {
-            padding: 0 1rem;
-            font-size: 0.8rem;
+            font-size: 1rem;
             margin-left: 0.8rem;
             background-image: url("../../assets/arrowsRight.svg");
             background-repeat: no-repeat;
             background-size: 0.9rem;
             background-position: 0 center;
             padding-left: 2rem;
+        }
+
+        &:hover {
+            text-decoration: underline 2px $secondary-color;
         }
     }
 
