--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -94,6 +94,10 @@
 
     &__users {
         max-width: 100%;
+        height: 100%;
+        max-height: 78vh;
+        gap: 1rem;
+        overflow: auto;
     }
 
     &__self {
