--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -15,7 +15,7 @@
     }
 
     &__overlay {
-        background-color: $secondary-light;
+        background-color: $secondary-color;
         height: 10rem;
         width: 14rem;
         margin-top: 0.5rem;
@@ -24,7 +24,7 @@
         border-radius: 15px;
         flex-direction: column;
         position: fixed;
-        box-shadow: -3px 3px $primary-light;
+        box-shadow: -2px 2px $primary-light;
         box-sizing: border-box;
         padding: 1rem;
         justify-content: space-between;
