--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -16,10 +16,9 @@
 
     &__overlay {
         background-color: $secondary-color;
-        height: 11rem;
+        // height: 11rem;
         width: 14rem;
         margin-top: 0.5rem;
-        // overflow: hidden;
         display: flex;
         border-radius: 15px;
         flex-direction: column;
@@ -32,20 +31,22 @@
 
     &__title {
         font-size: 1.1rem;
+        margin-bottom: 0.5rem;
     }
 
     &__text {
         display: flex;
         flex-direction: column;
-        gap: 0.35em;
+        gap: 0.1rem;
         font-size: 0.8rem;
+        line-height: 1.1rem;
     }
 
     &__body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        gap: 1rem;
+        gap: 0.5rem;
     }
 
     &__contact {
