add util function and setstate for user avatar colors. modified user avatar svg to a svg without background.

--- a/src/components/ChannelUser/ChannelUser.scss
+++ b/src/components/ChannelUser/ChannelUser.scss
@@ -24,6 +24,10 @@
             box-sizing: border-box;
             overflow: hidden;
         }
+
+        &--self {
+            font-weight: 800;
+        }
     }
 
     &__status {
