add input validation stylings, refactored sass

--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/_reset.scss" as *;
 
 .channel {
-    background-color: $secondary-lighter;
+    background-color: $secondary-light;
     height: 100%;
     width: 3rem;
     box-sizing: border-box;
