--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,5 +12,4 @@ $title-font: "Josefin Sans", sans-serif;
 $content-font: "Lexend", sans-serif;
 
 $secondary-color: #FFCA3A;
-$secondary-light: #EBEDEF;
-$secondary-lighter: #F7F7F7;
+$secondary-light: #F7F7F7;
