modified styling for channel bar mobile size, and add styling for voice config

--- a/src/components/ChannelBar/ChannelBar.scss
+++ b/src/components/ChannelBar/ChannelBar.scss
@@ -6,6 +6,7 @@
     background-color: $secondary-light;
     height: 100%;
     width: 3rem;
+    min-width: 3rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
