add mute sound feature and styling, deployment testing

--- a/src/components/ChannelUser/ChannelUser.scss
+++ b/src/components/ChannelUser/ChannelUser.scss
@@ -36,6 +36,11 @@
 
         &--icon {
             height: 0.8rem;
+            display: none;
+
+            @include tablet {
+                display: inline-block;
+            }
         }
     }
 }
